# mindfriend-takehome

./: .env.example  .gitignore  AGENTS.md  README.md  pyproject.toml
app/: __init__.py  config.py  main.py  runtime.py
app/models/: __init__.py  jira.py  search.py
app/routes/: search.py  webhooks.py
app/services/: __init__.py  indexer.py  jira_client.py  jira_events.py  llm_client.py  notifier.py  search_service.py
app/store/: __init__.py  vector_store.py
artifacts/demo/: notification-demo.md  search-demo.txt
artifacts/time-report/: mindfriend-time-report.csv
docs/: architecture.md  submission-walkthrough.md  time-report.md
fixtures/jira/: done-event.json  non-done-event.json
scripts/: bootstrap_index.py  demo_query.py  generate_time_report.py
tests/: conftest.py  test_done_webhook.py  test_indexer.py  test_notifier.py  test_resilience.py  test_search.py  test_smoke.py
